name:           srcloc
version:        0.6.0.1
cabal-version:  >= 1.10
license:        BSD3
license-file:   LICENSE
copyright:      (c) 2006-2011 Harvard University
                (c) 2011-2024 Geoffrey Mainland
author:         Geoffrey Mainland <mainland@drexel.edu>
maintainer:     Geoffrey Mainland <mainland@drexel.edu>
stability:      alpha
homepage:       https://github.com/mainland/srcloc
category:       Data
synopsis:       Data types for managing source code locations.
description:    Data types for tracking, combining, and printing source code locations.
tested-with:    GHC==8.0.2,
                GHC==8.2.2,
                GHC==8.4.3,
                GHC==8.6.5,
                GHC==8.8.4,
                GHC==8.10.7,
                GHC==9.0.2,
                GHC==9.2.2,
                GHC==9.4.8,
                GHC==9.6.4,
                GHC==9.8.2,
                GHC==9.10.1

build-type:     Simple

library
  default-language: Haskell2010

  exposed-modules:
    Data.Loc

  build-depends:
    base >= 4 && < 5

source-repository head
  type:     git
  location: git://github.com/mainland/srcloc.git
